--- a/NewAllocator/NewAllocator.vcxproj.filters
+++ b/NewAllocator/NewAllocator.vcxproj.filters
@@ -21,10 +21,10 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\EasyAllocator\mempool.h">
+    <ClInclude Include="easyallocator.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="..\EasyAllocator\easyallocator.h">
+    <ClInclude Include="mempool.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -33,6 +33,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="NewAllocator.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="testallocator.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
